--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "reselect": "^4.0.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "start:server": "json-server --watch --port 4000 --delay 1000 server/db.json",
+    "start:server": "json-server --watch --port 4000 server/db.json",
     "start:all": "npm run start & npm run start:server",
     "build": "react-scripts build",
     "test": "react-scripts test",
